# ml-misc

./: .gitignore  README.md  pyproject.toml
feast_recsys_test/feature_repo/: example_repo.py  feature_store.yaml  generate_data.py
feast_recsys_test/feature_repo/data/: item.parquet  user.parquet
feast_tutorial/feature_repo/: __init__.py  example_repo.py  feature_store.yaml  test_workflow.py
feast_tutorial/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
ml_misc/: create_folds.py  feature_engineering.py  linear_regression.py  random_data_gen.py  run_model.py  two_tower.py
notebooks/: Data Leakage Kaggle Tutorial.ipynb  Feast Tutorial.ipynb  Thakur Chapter 1.ipynb  Thakur Chapter 2.ipynb  Thakur Chapter 3 - Evaluation Metrics.ipynb  Thakur Chapter 5 - Categorical Variables.ipynb  Thakur Chapter 5.2 - Categorical Variables.ipynb
