[tool.poetry]
name = "ml-misc"
version = "0.0.1"
description = "Various small machine learning-related things, primarily implementing and playing around with different techniques/algorithms."
authors = ["Eric R. Fulmer <2952996+EFulmer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_misc"}]

[tool.poetry.dependencies]
# Feast needs Python 3.9.x.
python = ">=3.9, <3.10"
numpy = "^1.0.0"
flake8 = "^7.1.1"
black = "^25.1.0"
ipdb = "^0.13.13"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
jupyter = "^1.1.1"
feast = {extras = ["postgres", "redis"], version = "^0.49.0"}
ipython = "8.18.1"
torch = "^2.7.0"
torchvision = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
